# stroke-order-memorize

./: .env.example  .gitignore  CLAUDE.md  Justfile  LICENSE  README.md  flake.nix  main.py  pyproject.toml  stroke-memorize.service
app/: core.py  db.py  models.py  routes.py  strokes.py  wanikani.py
app/static/: strokes.js
app/templates/: _card_partial.html  base.html  card.html  done.html  home.html  settings.html  stats.html  strokes.html
docs/superpowers/plans/: 2026-03-10-backend-frontend.md  2026-03-11-daily-new-card-limit.md  2026-03-11-wanikani-api-best-practices.md  2026-03-12-functional-core-imperative-shell.md  2026-03-13-bugfix-quartet.md  2026-03-13-rate-limit-wanikani-client.md  2026-03-14-db-class-refactor.md  2026-03-14-session-ux-improvements.md  2026-04-04-live-settings.md
docs/superpowers/specs/: 2026-03-10-backend-frontend-design.md  2026-03-11-daily-new-card-limit-design.md  2026-03-14-session-ux-improvements-design.md  2026-04-04-live-settings-design.md
tests/: conftest.py  test_core.py  test_db.py  test_routes.py  test_strokes.py  test_wanikani.py
