[project]
name = "stroke-memorize"
version = "0.1.0"
description = "Memorize stroke order and how to write a character"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "fsrs>=6.3.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "kanjivg>=20250816",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]
